// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $25.00
  </h1>
</div>
`;

exports[`Should render expenses totals - count and total amount 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $125.00
  </h1>
</div>
`;
